# bootcamp_talento_tech_project_final

./: .gitignore  NOTEBOOK_TRAINING_version_final_clara.ipynb  README.md  app.py  main.py  pyproject.toml  test_nb.ipynb
display/: configuration.py  login.py  predict.py  upload.py
models/: clasificador_texto.pkl
models/modelo_embeddings/: config_sentence_transformers.json
parameters/: allowed_ids.py
src/: authentication.py  classifier.py  file_processing.py  predict.py
